<resources>
    <string name="app_name">BLE Attendance</string>
    <string name="username">Student email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not registered ? </string>
    <string name="register">Register Here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered</string>

    <string name="uuid">UUID</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="uuid_match">Matching ??</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="user">User</string>
    <string name="Time">Time</string>
    <string name="Date">Date</string>
    <string name="record_attendance">Record Attendance</string>
    <string name="Student">student</string>
    <string name="Lecturer">lecturer</string>
    <string name="Admin">admin</string>
    <string name="logout">Logout</string>
    <string name="view_attendance">View Attendance</string>
    <string name="add_attendance">Add Attendance</string>
    <string name="lecture_email">Lecture email</string>
    <string name="remember_me">Remember me</string>
    <string name="addAttendance">Add Attendance</string>
    <string name="viewAttendance">View Attendance</string>
    <string name="email_email_com">email@email.com</string>
</resources>
