<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/container"
    android:background="#123456"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="187dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo1" />

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="300dp"
            android:layout_height="50dp"

            android:layout_marginTop="10dp"
            android:background="@drawable/edit_round"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/username"
            android:hint="@string/lecture_email"
            android:paddingLeft="2dp" />


       <!-- <EditText
            android:id="@+id/edittext_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/password"
            android:hint="@string/password" />-->


        <android.support.design.widget.TextInputLayout

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_round"
                android:drawableStart="@drawable/password"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/remember_me"
            android:textAlignment="viewStart"
            android:textColor="#ffffff"
            android:textStyle="bold" />





    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_round"
        android:text="@string/login"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#04ea00"
            android:text="@string/register"/>

    </LinearLayout>



</LinearLayout>